# docs/swagger.json
@@ -451,6 +451,9 @@
                 "status": {
                     "type": "string"
                 },
+                "trace_id": {
+                    "type": "string"
+                },
                 "updated_at": {
                     "type": "string"
                 },
@@ -487,6 +490,9 @@
                     "type": "string"
                 },
                 "status": {
+                    "type": "string"
+                },
+                "trace_id": {
                     "type": "string"
                 },
                 "type_description": {
