# pkg/api/http/audit/v1/models/data_audit_d_t_o.go
@@ -44,6 +44,9 @@ type DataAuditDTO struct {
 	// status
 	Status string `json:"status,omitempty"`
 
+	// trace id
+	TraceID string `json:"trace_id,omitempty"`
+
 	// type description
 	TypeDescription string `json:"type_description,omitempty"`
 
